fix: reduce letter-spacing in menu to fit in 1 line

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ h1 {
 
  #menu {
     font-size: 100%;
-    letter-spacing: 3px;
+    letter-spacing: 1px;
     list-style-type: none;
     display: flex;
  }
